# snapctl

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.xml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  release.yml
cli/: .coverage
cli/commands/: backup.py  main.py  plan.py  validate.py
cli/internal/aws/: backup.py  client.py  formatter.py  plan.py  resource_filtering.py  session.py  snapshotting.py
cli/internal/utility/: config.py
cli/tests/integration/: conftest.py  test_backup_orchestration.py  test_plan_command.py  test_resource_filtering_integration.py  test_snapshotting.py
cli/tests/unit/: test_client.py  test_config.py  test_resource_filtering.py  test_session.py
examples/: simple-config.yml
snapctl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
