[project]
name = "snapctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.37",
    "pyyaml>=6.0.2",
    "ruff>=0.13.1",
    "rich>=14.1.0",
    "typer>=0.19.2",
    "structlog>=25.5.0",
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[project.scripts]
snapctl = "cli.commands.main:app"
